# reddit-posts-stream

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: __init__.py
consumer/: Dockerfile  requirements.txt  spark_consumer.py
db/: Dockerfile  database_setup.sql
db_init/: database_setup.sql
producer/: Dockerfile  reddit_producer.py  requirements.txt
